--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Stronka na rozpoczęcie roku, I guess</title>
-    </head>
-    <body>
-        
-    </body>
+<html lang="pl">
+  <head>
+    <meta charset="utf-8" />
+    <title>Stronka na rozpoczęcie roku, I guess</title>
+  </head>
+  <body>
+    <header><h1>Strona.</h1></header>
+    <main>
+      <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem magni
+        quae maxime est voluptatum voluptates facere fugiat, atque voluptatibus,
+        obcaecati rerum dolorum, ipsam illum? Omnis blanditiis minima expedita
+        asperiores corrupti!
+      </article>
+      <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+        minima consequatur rem, quam beatae voluptatem, illum, hic ea odit
+        repellat tempore veritatis commodi explicabo eveniet id! In suscipit
+        vero qui!
+      </article>
+      <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+        eligendi assumenda illo molestias saepe maxime aliquid aut ratione.
+        Eligendi debitis vitae in? Minima obcaecati dolor, maxime voluptas
+        recusandae animi possimus!
+      </article>
+    </main>
+  </body>
 </html>
