add stylesheet and link it

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Stronka na rozpoczęcie roku, I guess</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header><h1>Strona.</h1></header>
