make articles in paragraphs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
   <head>
     <meta charset="utf-8" />
     <title>Stronka na rozpoczęcie roku, I guess</title>
@@ -9,22 +9,28 @@
     <header><h1>Strona.</h1></header>
     <main>
       <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem magni
-        quae maxime est voluptatum voluptates facere fugiat, atque voluptatibus,
-        obcaecati rerum dolorum, ipsam illum? Omnis blanditiis minima expedita
-        asperiores corrupti!
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda ex
+          rem voluptatem, aliquam ipsum magnam repudiandae quibusdam quidem
+          similique fugit iusto velit veniam illum dolores! Dignissimos tempore
+          ipsam maiores neque?
+        </p>
       </article>
       <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-        minima consequatur rem, quam beatae voluptatem, illum, hic ea odit
-        repellat tempore veritatis commodi explicabo eveniet id! In suscipit
-        vero qui!
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga optio,
+          placeat ratione praesentium sequi doloremque pariatur molestiae fugiat
+          incidunt eveniet nulla accusantium velit quisquam totam quae! Fugiat
+          incidunt esse obcaecati!
+        </p>
       </article>
       <article>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-        eligendi assumenda illo molestias saepe maxime aliquid aut ratione.
-        Eligendi debitis vitae in? Minima obcaecati dolor, maxime voluptas
-        recusandae animi possimus!
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia rerum
+          dignissimos unde iste assumenda ipsam quibusdam commodi eos delectus,
+          dicta ullam est, modi nemo aut nesciunt ex cupiditate reprehenderit
+          nam.
+        </p>
       </article>
     </main>
   </body>
