--- a/index.html
+++ b/index.html
@@ -33,5 +33,13 @@
         </p>
       </article>
     </main>
+    <aside>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ea
+        deleniti quaerat fugit, accusantium quis, ipsum magni atque voluptatem
+        reprehenderit hic nisi consectetur ab cumque iusto maxime inventore
+        voluptates voluptas.
+      </p>
+    </aside>
   </body>
 </html>
