add footer and scroll to top button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         voluptates voluptas.
       </p>
     </aside>
-    <footer><h2>&copyStahoo Kępiński</h2></footer>
+    <footer>
+      <h2>
+        &copyStahoo Kępiński
+        <button onclick="clicked()">Jump back to top</button>
+      </h2>
+    </footer>
+
+    <script>
+      function clicked() {
+        window.scrollTo(0, 0);
+      }
+    </script>
   </body>
 </html>
