add stuff to css and patch stuff

--- a/index.html
+++ b/index.html
@@ -6,48 +6,49 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><h1>Strona.</h1></header>
-    <main>
-      <article>
+    <div id="content">
+      <header><h1>Strona.</h1></header>
+      <main>
+        <article>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            ex rem voluptatem, aliquam ipsum magnam repudiandae quibusdam quidem
+            similique fugit iusto velit veniam illum dolores! Dignissimos
+            tempore ipsam maiores neque?
+          </p>
+        </article>
+        <article>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+            optio, placeat ratione praesentium sequi doloremque pariatur
+            molestiae fugiat incidunt eveniet nulla accusantium velit quisquam
+            totam quae! Fugiat incidunt esse obcaecati!
+          </p>
+        </article>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            rerum dignissimos unde iste assumenda ipsam quibusdam commodi eos
+            delectus, dicta ullam est, modi nemo aut nesciunt ex cupiditate
+            reprehenderit nam.
+          </p>
+        </article>
+      </main>
+      <aside>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda ex
-          rem voluptatem, aliquam ipsum magnam repudiandae quibusdam quidem
-          similique fugit iusto velit veniam illum dolores! Dignissimos tempore
-          ipsam maiores neque?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ea
+          deleniti quaerat fugit, accusantium quis, ipsum magni atque voluptatem
+          reprehenderit hic nisi consectetur ab cumque iusto maxime inventore
+          voluptates voluptas.
         </p>
-      </article>
-      <article>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga optio,
-          placeat ratione praesentium sequi doloremque pariatur molestiae fugiat
-          incidunt eveniet nulla accusantium velit quisquam totam quae! Fugiat
-          incidunt esse obcaecati!
-        </p>
-      </article>
-      <article>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia rerum
-          dignissimos unde iste assumenda ipsam quibusdam commodi eos delectus,
-          dicta ullam est, modi nemo aut nesciunt ex cupiditate reprehenderit
-          nam.
-        </p>
-      </article>
-    </main>
-    <aside>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ea
-        deleniti quaerat fugit, accusantium quis, ipsum magni atque voluptatem
-        reprehenderit hic nisi consectetur ab cumque iusto maxime inventore
-        voluptates voluptas.
-      </p>
-    </aside>
-    <footer>
-      <h2>
-        &copyStahoo Kępiński
-        <button onclick="clicked()">Jump back to top</button>
-      </h2>
-    </footer>
-
+      </aside>
+      <footer>
+        <h2>
+          &copyStahoo Kępiński
+          <button onclick="clicked()">Jump back to top</button>
+        </h2>
+      </footer>
+    </div>
     <script>
       function clicked() {
         window.scrollTo(0, 0);
